# yaimp

./: .gitignore  ActionManagement.cpp  ActionManagement.hpp  AddTrackedPlaylistAction.cpp  AddTrackedPlaylistAction.hpp  AddUrlDialog.cpp  AddUrlDialog.hpp  AddUrlMenuAction.cpp  AddUrlMenuAction.hpp  Assert.hpp  CMakeLists.txt  DialogBase.cpp  DialogBase.hpp  EventListeners.cpp  EventListeners.hpp  Exceptions.cpp  Exceptions.hpp  GUIBase.cpp  GUIBase.hpp  HttpClient.cpp  HttpClient.hpp  IUnknownImpl.cpp  IUnknownImpl.hpp  LICENSE  LoginDialog.cpp  LoginDialog.hpp  MD5.cpp  MD5.hpp  MenuManagement.cpp  MenuManagement.hpp  OptionsFrame.cpp  OptionsFrame.hpp  PlayerHook.cpp  PlayerHook.hpp  PlaylistManager.cpp  PlaylistManager.hpp  RefCounter.hpp  Utility.cpp  Utility.hpp  Yaimp.cpp  (+7 more)
Langs/: English.lng  Russian.lng
include/SDK/: apiMusicLibrary.h  apiObjects.h  apiPlaylists.h
